fix: overflow error 2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -504,5 +504,6 @@
   }
   html{
     overflow-x:hidden;
+    max-width:100vw;
   }
 }
